# Quotemaker

./: .gitignore  README.md  authors.txt  pyproject.toml  quotemaker.py  requirements.txt
colour_constants/: __init__.py  colour_constants.py
output/: __init__.py
